Fixed size of word wrap box in chat window.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@
 
 .message-wrapper {
     border: 1px solid  grey;
-    width: 550px;
+    width: 600px;
     display: inline-block;
     word-wrap: break-word;
 }
